2008-01-31  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Ensure gtksourceview-1.0 is
	written to the versions file as gtksourceview (no '-1.0').

2008-01-31  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/tarball-conversion.config: Move libxml2 and libxslt to
	external dependency.

2008-01-30  Elijah Newren  <newren gmail com>

	* versions:
	Another update for GNOME 2.21.90.

	libxml2 and libxslt shouldn't be in versions anymore; they're now
	external deps.  swfdec-gnome-0.5 was pulling from freedesktop.org,
	and we need ftp.gnome.org tarballs for releases (so I had to
	update to late released tarball).  And there's no such thing as
	"gtksourceview-1.0".

2008-01-30  Elijah Newren  <newren gmail com>

	* versions:
	* smoketesting/sample-tarball.jhbuildrc:
	Update for GNOME 2.21.90

2008-01-15  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/tarball-conversion.config: Add new modules and their
	accepted dependencies.

2008-01-11  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Look for the schedule file first in cwd,
	then in the directory of the py files. Ensures cron job will work.

2008-01-09  Elijah Newren  <newren gmail com>

	* smoketesting/convert-to-tarballs.py:
	Use gnome-suites-%d-%d.modules, not gnome-%d-%d.modules.  The latter
	contains extra cruft unrelated to releases.

2008-01-09  Elijah Newren  <newren gmail com>

	* smoketesting/tarball-conversion-stable.config:
	* smoketesting/sample-tarball-stable.jhbuildrc:
	* versions-stable:
	Update for GNOME 2.20.3

	* smoketesting/convert-to-tarballs.py:
	Fix simple bug in obtaining moduleset path from the command line

2008-01-07  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Sort tarball/release stuff before all other
	events. Don't understand why it was the other way around.

2008-01-07  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/automail.py: Wrap descriptions using textwrap. Add a common