@@ -1,3 +1,12 @@
+2008-02-02  Sven Herzberg  <herzi@gnome-de.org>
+
+	* prepare-ChangeLog.pl: after chatting with rob we realized that we
+	should not diff against the index. The solution right now is this:
+	Diff the index against the last revision; if this doesn't reveal
+	changes, diff the tree against the last revision. This way
+	"git add file && prepare..." will end up containing only the files
+	already added to the index
+
 2008-01-31  Olav Vitters  <olav@bkor.dhs.org>
 
 	* smoketesting/convert-to-tarballs.py: Ensure gtksourceview-1.0 is
